--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,131 +1,92 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/REGISTRADURIA.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/REGISTRADURIA
+#Mon Feb 03 10:15:53 EST 2025
+file.reference.commons-codec-1.6-tests.jar-1=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\commons-codec-1.6-tests.jar
 excludes=
-file.reference.commons-codec-1.6-javadoc.jar=C:\\Users\\57300\\Desktop\\conector a java\\commons-codec-1.6-javadoc.jar
-file.reference.commons-codec-1.6-javadoc.jar-1=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\commons-codec-1.6-javadoc.jar
-file.reference.commons-codec-1.6-sources.jar=C:\\Users\\57300\\Desktop\\conector a java\\commons-codec-1.6-sources.jar
-file.reference.commons-codec-1.6-sources.jar-1=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\commons-codec-1.6-sources.jar
-file.reference.commons-codec-1.6-tests.jar=C:\\Users\\57300\\Desktop\\conector a java\\commons-codec-1.6-tests.jar
-file.reference.commons-codec-1.6-tests.jar-1=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\commons-codec-1.6-tests.jar
-file.reference.commons-codec-1.6.jar=C:\\Users\\57300\\Desktop\\conector a java\\commons-codec-1.6.jar
-file.reference.commons-codec-1.6.jar-1=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\commons-codec-1.6.jar
-file.reference.itext5-itextpdf-5.5.12.jar=C:\\Users\\57300\\Desktop\\conector a java\\itext5-itextpdf-5.5.12.jar
-file.reference.itext5-itextpdf-5.5.12.jar-1=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\itext5-itextpdf-5.5.12.jar
-file.reference.jfreechart-1.5.4.jar=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\jfreechart-1.5.4.jar
-file.reference.jfreesvg-2.0.jar=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\jfreesvg-2.0.jar
-file.reference.junit-4.11.jar=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\junit-4.11.jar
-file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\57300\\Desktop\\conector a java\\mysql-connector-j-8.0.32.jar
-file.reference.orsoncharts-1.4-eval-nofx.jar=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\orsoncharts-1.4-eval-nofx.jar
-file.reference.orsonpdf-1.6-eval.jar=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\orsonpdf-1.6-eval.jar
-file.reference.servlet.jar=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\servlet.jar
-file.reference.swtgraphics2d.jar=C:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\swtgraphics2d.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${file.reference.commons-codec-1.6-javadoc.jar}:\
-    ${file.reference.commons-codec-1.6-sources.jar}:\
-    ${file.reference.commons-codec-1.6-tests.jar}:\
-    ${file.reference.commons-codec-1.6.jar}:\
-    ${file.reference.itext5-itextpdf-5.5.12.jar}:\
-    ${file.reference.mysql-connector-j-8.0.32.jar}:\
-    ${file.reference.commons-codec-1.6-javadoc.jar-1}:\
-    ${file.reference.commons-codec-1.6-sources.jar-1}:\
-    ${file.reference.commons-codec-1.6-tests.jar-1}:\
-    ${file.reference.commons-codec-1.6.jar-1}:\
-    ${file.reference.itext5-itextpdf-5.5.12.jar-1}:\
-    ${file.reference.jfreechart-1.5.4.jar}:\
-    ${file.reference.jfreesvg-2.0.jar}:\
-    ${file.reference.junit-4.11.jar}:\
-    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
-    ${file.reference.orsonpdf-1.6-eval.jar}:\
-    ${file.reference.servlet.jar}:\
-    ${file.reference.swtgraphics2d.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.external.vm=true
-javac.modulepath=
-javac.processormodulepath=
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=17
-javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.html5=false
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-# The jlink additional root modules to resolve
-jlink.additionalmodules=
-# The jlink additional command line parameters
-jlink.additionalparam=
-jlink.launcher=true
-jlink.launcher.name=REGISTRADURIA
-main.class=mpRegistraduria.Presentacion
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
-source.encoding=UTF-8
-src.dir=src
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+run.classpath=${javac.classpath}\:${build.classes.dir}
+file.reference.servlet.jar=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\servlet.jar
+javac.processorpath=${javac.classpath}
+dist.javadoc.dir=${dist.dir}/javadoc
+file.reference.commons-codec-1.6.jar=C\:\\Users\\57300\\Desktop\\conector a java\\commons-codec-1.6.jar
 test.src.dir=test
+file.reference.orsoncharts-1.4-eval-nofx.jar=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\orsoncharts-1.4-eval-nofx.jar
+run.modulepath=${javac.modulepath}
+annotation.processing.enabled=true
+file.reference.jfreesvg-2.0.jar=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\jfreesvg-2.0.jar
+build.sysclasspath=ignore
+debug.modulepath=${run.modulepath}
+file.reference.junit-4.11.jar=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\junit-4.11.jar
+javac.compilerargs=
+file.reference.commons-codec-1.6-javadoc.jar=C\:\\Users\\57300\\Desktop\\conector a java\\commons-codec-1.6-javadoc.jar
+file.reference.swtgraphics2d.jar=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\swtgraphics2d.jar
+javadoc.noindex=false
+file.reference.commons-codec-1.6-sources.jar-1=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\commons-codec-1.6-sources.jar
+javadoc.private=false
+javadoc.author=false
+main.class=mpRegistraduria.Presentacion
+junit.selected.version=4
+source.encoding=UTF-8
+javac.source=17
+includes=**
+javadoc.use=true
+jar.compress=false
+javadoc.nonavbar=false
+annotation.processing.enabled.in.editor=false
+javadoc.notree=false
+annotation.processing.processors.list=
+file.reference.orsonpdf-1.6-eval.jar=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\orsonpdf-1.6-eval.jar
+javac.deprecation=false
+jlink.launcher=true
+javadoc.additionalparam=
+jlink.launcher.name=REGISTRADURIA
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.splitindex=true
+javac.processormodulepath=
+run.jvmargs=
+file.reference.commons-codec-1.6-tests.jar=C\:\\Users\\57300\\Desktop\\conector a java\\commons-codec-1.6-tests.jar
+jlink.additionalmodules=
+javadoc.encoding=${source.encoding}
+javac.classpath=${file.reference.commons-codec-1.6-javadoc.jar}\:${file.reference.commons-codec-1.6-sources.jar}\:${file.reference.commons-codec-1.6-tests.jar}\:${file.reference.commons-codec-1.6.jar}\:${file.reference.itext5-itextpdf-5.5.12.jar}\:${file.reference.mysql-connector-j-8.0.32.jar}\:${file.reference.commons-codec-1.6-javadoc.jar-1}\:${file.reference.commons-codec-1.6-sources.jar-1}\:${file.reference.commons-codec-1.6-tests.jar-1}\:${file.reference.commons-codec-1.6.jar-1}\:${file.reference.itext5-itextpdf-5.5.12.jar-1}\:${file.reference.jfreechart-1.5.4.jar}\:${file.reference.jfreesvg-2.0.jar}\:${file.reference.junit-4.11.jar}\:${file.reference.orsoncharts-1.4-eval-nofx.jar}\:${file.reference.orsonpdf-1.6-eval.jar}\:${file.reference.servlet.jar}\:${file.reference.swtgraphics2d.jar}
+file.reference.commons-codec-1.6.jar-1=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\commons-codec-1.6.jar
+mkdist.disabled=false
+run.test.modulepath=${javac.test.modulepath}
+build.classes.excludes=**/*.java,**/*.form
+dist.jlink.dir=${dist.dir}/jlink
+dist.jar=${dist.dir}/REGISTRADURIA.jar
+build.classes.dir=${build.dir}/classes
+file.reference.itext5-itextpdf-5.5.12.jar-1=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\itext5-itextpdf-5.5.12.jar
+debug.test.modulepath=${run.test.modulepath}
+build.test.classes.dir=${build.dir}/test/classes
+javadoc.windowtitle=
+build.test.results.dir=${build.dir}/test/results
+file.reference.commons-codec-1.6-javadoc.jar-1=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\commons-codec-1.6-javadoc.jar
+annotation.processing.processor.options=
+file.reference.mysql-connector-j-8.0.32.jar=C\:\\Users\\57300\\Desktop\\conector a java\\mysql-connector-j-8.0.32.jar
+dist.dir=dist
+build.dir=build
+dist.archive.excludes=
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+file.reference.jfreechart-1.5.4.jar=C\:\\Users\\Samuel\\OneDrive\\Desktop\\librerias_PA\\jfreechart-1.5.4.jar
+build.generated.dir=${build.dir}/generated
+javadoc.version=false
+javac.test.modulepath=${javac.modulepath}
+file.reference.commons-codec-1.6-sources.jar=C\:\\Users\\57300\\Desktop\\conector a java\\commons-codec-1.6-sources.jar
+debug.test.classpath=${run.test.classpath}
+javac.external.vm=true
+javac.target=17
+platform.active=default_platform
+manifest.file=manifest.mf
+javadoc.html5=false
+file.reference.itext5-itextpdf-5.5.12.jar=C\:\\Users\\57300\\Desktop\\conector a java\\itext5-itextpdf-5.5.12.jar
+javac.test.processorpath=${javac.test.classpath}
+meta.inf.dir=${src.dir}/META-INF
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+dist.jlink.output=${dist.jlink.dir}/REGISTRADURIA
+annotation.processing.run.all.processors=true
+javac.modulepath=
+src.dir=src
+jlink.additionalparam=
+debug.classpath=${run.classpath}
